<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".activities.TeamEditorActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_title"
            style="@style/EditorTitleText"
            android:layout_width="325dp"
            android:layout_height="118dp"
            android:fontFamily="@font/supercell"
            android:rotation="2"
            android:rotationX="2"
            android:rotationY="-17"
            android:text="@string/app_name"
            android:textSize="34sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_game_button"
            style="@style/MainMenuButton"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/supercell"
            android:text="@string/start_game"
            app:backgroundTint="@color/team_1_color" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/setup_teams_button"
            style="@style/MainMenuButton.Outlined"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/supercell"
            android:text="@string/team_setup" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_challenges_button"
            style="@style/MainMenuButton.Outlined"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/supercell"
            android:text="@string/challenge_editor_title" />

    </LinearLayout>

</RelativeLayout>

